@@ -5,6 +5,7 @@ git  Will Entriken <cameralife AT phor.net>
 * Do not delete photos
 * Use CDN for bootstrap
 * Supports OpenGraph
+* Drop Gallery Remote support
 
 2.6.6  Will Entriken <cameralife AT phor.net>
 * Improve install process
